--- a/hosted/style.css
+++ b/hosted/style.css
@@ -49,7 +49,7 @@ nav:nth-child(1) {
 
 .domoForm {
     border: 2px solid #338acc;
-    height: 35px;
+    height: 70px;
     width: 700px;
     margin-top:0px;
     padding-top:10px;
@@ -69,6 +69,10 @@ nav:nth-child(1) {
 
 .domoForm input[type=text] {
     float:left;
+}
+
+.domoForm select{
+    margin-right: 0.5rem;
 }
 
 .makeDomoSubmit {
