--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -8,14 +8,11 @@
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
     <div class="navlink"><a id="logoutButton" href="/logout">Log out</a></div>
-    <div class="navlink"><a id="settingsButton" href="/settings">Settings</a></div>
+    <div class="navlink"><a id="makerButton" href="/maker">App</a></div>
   </nav>
 
-  <section id="makeDomo">
+  <section id="content">
 
-  </section>
-  <section id="domos">
-    
   </section>
 
   <div id="domoMessage" class='hidden'>
@@ -23,6 +20,6 @@
     <h3><span id="errorMessage"></span></h3>
     <img id="domo" src="assets/img/domo.png" alt="domo"/>
   </div>
-  <script src="/assets/appBundle.js"></script>
+  <script src="/assets/settingsBundle.js"></script>
 </body>
 </html>
